[project]
name = "mcp-cylera-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mcp[cli]>=1.9.4",
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "fastapi[standard]>=0.115.13",
    "python-dotenv>=1.1.0",
    "pytest-dotenv>=0.5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
