[project]
name = "mcp-cylera-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mcp[cli]>=1.9.4",
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "python-dotenv>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "fastmcp>=3.0.1",
    "cylera-client>=0.2.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
]
